initial-commit-of-slides-renamed-presentation

--- a/intro-to-dash.ipynb
+++ b/intro-to-dash.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,12 +30,19 @@
    "source": [
     "## Step 1: Import our dependencies\n",
     "\n",
-    "Dash makes use of plotly for its charts. We are using dash-bootstrap-components here for our html components and styling. We are importing dash-core-components (dcc) for dash components such as dropdowns and graphs. The dash html components provide an easy way for us to create html components. jupyter dash is used for developing within jupyter notebooks. Finally, we are importing Input and Output and state from dash.dependencies. These are used for callbacks."
+    "Dash makes use of plotly for its charts. We are using dash-bootstrap-components here for our html components and styling. We are importing dash-core-components (dcc) for dash components such as dropdowns and graphs. The dash html components provide an easy way for us to create html components. jupyter dash is used for developing within jupyter notebooks. Finally, we are importing Input and Output and state from dash.dependencies. These are used for callbacks.\n",
+    "\n",
+    "**Useful documentation links:**\n",
+    "\n",
+    "- Plotly: [make_subplots](https://plotly.com/python-api-reference/generated/plotly.subplots.make_subplots.html)\n",
+    "- Dash Core Components: [dash.dcc](https://dash.plotly.com/dash-core-components)\n",
+    "- Dash HTML Components: [dash.html](https://dash.plotly.com/dash-html-components)\n",
+    "- Jupyter Dash: [jupyter dash](https://dash.plotly.com/jupyter-dash)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +52,7 @@
     "from plotly.subplots import make_subplots\n",
     "from dash import dcc, html\n",
     "from jupyter_dash import JupyterDash\n",
-    "from dash.dependencies import Input, Output, State\n"
+    "from dash.dependencies import Input, Output, State"
    ]
   },
   {
@@ -57,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +182,7 @@
        "[63 rows x 3 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,6 +202,7 @@
     "\n",
     "    Returns\n",
     "    -------\n",
+    "        df : pd.DataFrame The dataframe with the summed columns.\n",
     "\n",
     "    \"\"\"\n",
     "    dff = df.loc[(start_date <= df[ts]) & (df[ts] <= end_date)]\n",
@@ -219,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1372,6 +1380,15 @@
     "    \"\"\"\n",
     "    Creates a timeseries figure with two subplots. The first subplot graphs the Total Output for the week.\n",
     "    The second subplot graphs the Calories Burned for the week.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "        df : pd.DataFrame The dataframe to be plotted.\n",
+    "        frequency : str The frequency of the group. Default is weekly.\n",
+    "    \n",
+    "    Returns\n",
+    "    -------\n",
+    "        go.Figure: The figure to be plotted.\n",
     "    \"\"\"\n",
     "    switcher = {\n",
     "        'D': 'Day',\n",
@@ -1422,7 +1439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
