--- a/intro-to-dash.ipynb
+++ b/intro-to-dash.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,10 +45,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import plotly.graph_objects as go\n",
     "import plotly.express as px\n",
     "import dash_bootstrap_components as dbc\n",
@@ -68,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +187,7 @@
        "[62 rows x 3 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1449,7 +1450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1521,7 +1522,8 @@
     "        outline=True,\n",
     "        color='info',\n",
     "        style={\n",
-    "            \"margin-left\": \"1rem\",\n",
+    "            \"width\": \"50rem\",\n",
+    "            \"margin-left\": \"10rem\",\n",
     "            \"margin-bottom\": \"1rem\"\n",
     "        }\n",
     "    )\n",
@@ -1557,7 +1559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1565,16 +1567,6 @@
      "output_type": "stream",
      "text": [
       "Dash app running on http://127.0.0.1:8050/\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\jrami\\VSCodeProjects\\dash-presentation\\venv\\lib\\site-packages\\jupyter_dash\\jupyter_app.py:139: UserWarning:\n",
-      "\n",
-      "The 'environ['werkzeug.server.shutdown']' function is deprecated and will be removed in Werkzeug 2.1.\n",
-      "\n"
      ]
     }
    ],
@@ -1627,7 +1619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1677,7 +1669,7 @@
     "        outline=True,\n",
     "        style={\n",
     "            \"width\": \"50rem\",\n",
-    "            \"margin-left\": \"1rem\",\n",
+    "            \"margin-left\": \"10rem\",\n",
     "            \"margin-bottom\": \"1rem\"\n",
     "        }\n",
     "    )\n",
@@ -1708,47 +1700,91 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 7: Lets finish off our dashboard with a final plot and a favorite indstructor card"
+    "## Step 7: Lets finish off our dashboard with a final plot and a favorite instructor card"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dash app running on http://127.0.0.1:8050/\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\jrami\\VSCodeProjects\\dash-presentation\\venv\\lib\\site-packages\\jupyter_dash\\jupyter_app.py:139: UserWarning:\n",
+      "\n",
+      "The 'environ['werkzeug.server.shutdown']' function is deprecated and will be removed in Werkzeug 2.1.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "def get_top_instructor(workout_df: pd.DataFrame) -> px.bar:\n",
-    "    fav_instructor_name = workout_df['Instructor Name'].mode()[0]\n",
-    "    fav_instructor_image = os.path.join(\n",
-    "        'assets', \n",
-    "        'img', \n",
-    "        fav_instructor_name.lower().replace(\" \", \"_\") + \".png\"\n",
+    "def get_instructors_by_discipline_chart(df: pd.DataFrame) -> px.bar:\n",
+    "    df = df.groupby(['Instructor Name','Fitness Discipline']).agg('count').reset_index()\n",
+    "    chart = px.bar(df, x=\"Instructor Name\", y=\"count\", color=\"Fitness Discipline\", title=\"Total Output by Instructor\", width=1600)\n",
+    "    chart.update_layout(\n",
+    "        title_x=0.5\n",
     "    )\n",
-    "    return html.Center(\n",
-    "        html.Img(\n",
-    "        className=\"circular-square\",\n",
-    "        src=fav_instructor_image,\n",
-    "        title=f\"Favorite Instructor: {fav_instructor_name}\",\n",
-    "        ),\n",
-    "    )\n",
+    "    return chart\n",
     "\n",
-    "def create_top_instructor_card(workout_df: pd.DataFrame) -> dbc.Card:\n",
-    "    fav_instructor_name = workout_df['Instructor Name'].mode()[0]\n",
+    "def create_instructor_card(df: pd.DataFrame) -> dbc.Card:\n",
     "    return dbc.Card([\n",
     "        dbc.CardBody([\n",
-    "            html.Center(html.H1(\"Top Instructor\", className='card-title')),\n",
-    "            html.Center(html.H3(f\"{fav_instructor_name} is the top instructor!\")),\n",
-    "            get_top_instructor(workout_df)\n",
+    "            html.Center(html.H1(\"Instructor by Fitness Discipline\", className='card-title')),\n",
+    "            dcc.Graph(\n",
+    "                id='instructor-by-discipline-chart',\n",
+    "                figure=get_instructors_by_discipline_chart(df),\n",
+    "                style={\n",
+    "                    \"margin-top\": \"1rem\",\n",
+    "                    \"margin-bottom\": \"1rem\"\n",
+    "                }\n",
+    "            )\n",
     "        ])\n",
     "    ],\n",
-    "        outline=True,\n",
     "        color='info',\n",
+    "        outline=True,\n",
     "        style={\n",
-    "            \"width\": \"50rem\",\n",
-    "            \"margin-left\": \"10rem\",\n",
+    "            \"margin-top\": \"1rem\",\n",
+    "            \"margin-left\": \"1rem\",\n",
     "            \"margin-bottom\": \"1rem\"\n",
     "        }\n",
-    "    )"
+    "    )\n",
+    "\n",
+    "app.layout = html.Div(\n",
+    "    children=[\n",
+    "        dbc.Row([\n",
+    "                html.Center(titleCard),\n",
+    "                ],\n",
+    "                justify=\"center\",\n",
+    "                style={\n",
+    "                    'margin-left': '0.5rem'\n",
+    "                }\n",
+    "        ),\n",
+    "        dbc.Row([\n",
+    "            dbc.Col([\n",
+    "                create_calories_and_output_card(df),\n",
+    "            ]),\n",
+    "            dbc.Col([\n",
+    "                create_discipline_card(df)\n",
+    "            ])\n",
+    "        ]),\n",
+    "        dbc.Row([\n",
+    "            dbc.Col([\n",
+    "                create_instructor_card(df)\n",
+    "            ])\n",
+    "        ])\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "app.run_server(debug=True)\n"
    ]
   }
  ],
